# axum-tonic

./: Cargo.toml  README.md  build.rs  company_info.proto
src/: client.rs  comp_info.rs  company_info.rs  lib.rs  main.rs  multiplex.rs  nest.rs  proto.rs  rest_grpc.rs  server.rs  status.rs
tests/: lib.rs  test.proto
tests/common/: mod.rs  proto.rs  server.rs
