[package]
name = "axum_tonic"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Use Tonic with Axum"
homepage = "https://github.com/jvdwrf/axum-tonic"
keywords = ["axum", "tonic", "interop", "grpc", "web"]
categories = ["web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tonic = "0.12.2"
hyper = "1.4.1"
futures = "0.3.30"
tower = { version = "0.5.1" , features = ["make"] }

[build-dependencies]
tonic-build = "0.12.2"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
prost = "0.13.2"
http-body = "1.0.1"
tower-http = { version = "0.5.2", features = [
    "compression-gzip",
    "cors",
    "compression-br",
    "compression-deflate",
    "trace",
] }
tracing-subscriber = "0.3.18"
