
[package]
edition = "2024"
name = "axum_tonic"
version = "0.3.0"
license = "MIT OR Apache-2.0"
description = "Use Tonic with Axum"
homepage = "https://github.com/jvdwrf/axum-tonic"
keywords = ["axum", "tonic", "interop", "grpc", "web"]
categories = ["web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
tonic = "0.13"
hyper = "1"
futures = "0.3"
tower = { version = "0.5", features = ["make"] }
http-body = "1"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.13"
tower-http = { version = "0.6", features = [
    "compression-gzip",
    "cors",
    "compression-br",
    "compression-deflate",
    "trace",
] }
tracing-subscriber = "0.3"
